--- a/app/src/main/res/layout/tab3free.xml
+++ b/app/src/main/res/layout/tab3free.xml
@@ -9,6 +9,11 @@
     tools:context="com.cs496.secondproject01.MainActivity">
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"/>
+
+    <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
