--- a/app/src/main/res/drawable/button_radius_style.xml
+++ b/app/src/main/res/drawable/button_radius_style.xml
@@ -3,8 +3,8 @@
     <item android:state_pressed="true" >
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />
+            <stroke android:width="1dip" android:color="#689a92" />
+            <gradient android:angle="-90" android:startColor="#689a92" android:endColor="#689a92"  />
         </shape>
     </item>
     <item android:state_focused="true">
@@ -17,8 +17,8 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <stroke android:width="1dip" android:color="#8dbab3" />
+            <gradient android:angle="0" android:startColor="#8dbab3" android:endColor="#8dbab3" />
         </shape>
     </item>
 </selector>
