--- a/app/src/main/res/layout/activity_add_box_pop.xml
+++ b/app/src/main/res/layout/activity_add_box_pop.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_add_box_pop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/flower"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
