--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,18 +8,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/splash"
     tools:context="com.cs496.secondproject01.SplashActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/splash_msg"
-        android:text="추억상자"
+        android:text="추억:상자"
         android:textSize="40dp"
         android:typeface="sans"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
+        android:textStyle="bold|italic"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:textStyle="bold|italic"/>
+        android:layout_marginTop="50dp" />
 </RelativeLayout>
