--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -28,7 +28,7 @@
             android:text="Yeaseul Park"
             android:id="@+id/list_name"
             android:textSize="23dp"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
 
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
@@ -40,7 +40,7 @@
             android:text="010-8340-7877"
             android:id="@+id/list_no"
             android:textSize="10dp"
-            android:textColor="#666666"
+            android:textColor="#ffffff"
             android:layout_weight="1" />
 
         <!--
