--- a/app/src/main/res/layout/login_pop.xml
+++ b/app/src/main/res/layout/login_pop.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/cloud"
+    android:background="#30000000"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
 
     <TextView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Connect with\n Facebook Account \nand Sync Your Contacts!"
+        android:text="친구들과의 \n소중한 추억을 \n담아보세요!"
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:id="@+id/logintext"
         android:paddingRight="15dp"
         android:paddingLeft="15dp"
-        android:textColor="#ff6688"
+        android:textColor="#ffffff"
         android:typeface="normal"
-        android:textSize="25dp"
-        android:paddingBottom="35dp"
-        android:layout_marginTop="20dp"
+        android:textSize="30dp"
+        android:paddingBottom="20dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"/>
 
 
