--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -12,10 +12,11 @@
         android:layout_height="45dp"
         android:layout_width="45dp"
         android:id="@+id/textView_rank_no"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:text="1"
+        android:textColor="#8dbab3"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical"/>
 
@@ -29,10 +30,10 @@
 
     <TextView
         android:layout_height="45dp"
-        android:layout_width="240dp"
+        android:layout_width="180dp"
         android:text="RANK_LIST_ITEM"
         android:id="@+id/textView_rank_name"
-        android:textSize="25sp"
+        android:textSize="20sp"
         android:textColor="#ffffff"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical"
@@ -43,8 +44,9 @@
         android:layout_width="match_parent"
         android:text="5"
         android:id="@+id/textView_rank_count"
-        android:textSize="20sp"
-        android:textColor="#acacac"
+        android:textSize="18sp"
+        android:textColor="#77ffffff"
+        android:textAlignment="center"
         android:gravity="center_vertical"
         android:layout_gravity="center_vertical"/>
 
